--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,14 @@
   --effect-color: #ffffff;
   --title-text-color: #757575;
 }
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -27,6 +35,8 @@ ul {
   font-size: 26px;
   line-height: 1.19;
   color: var(--accent-color);
+  display: flex;
+  align-items: center;
 }
 .logo-header {
   color: #000000;
@@ -211,3 +221,26 @@ address {
   background: rgba(33, 150, 243, 0.9);
   color: #ffffff;
 }
+.container {
+  width: 1600px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.site-nav,
+.contact-nav,
+.site-header-content {
+  display: flex;
+}
+
+  site-header
+  site-header-content
+  site-nav-item
+  site-nav
+  site-nav-contact-item;
