--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   background-color: #e5e5e5;
+  width: 1600px;
 }
 a {
   text-decoration: none;
@@ -37,6 +38,7 @@ ul {
   color: var(--accent-color);
   display: flex;
   align-items: center;
+  margin-right: 85px;
 }
 .logo-header {
   color: #000000;
@@ -87,6 +89,9 @@ header {
 .header {
   background-image: url(../img/Header.jpg);
   color: var(--effect-color);
+  padding: 200px 452px;
+  align-items: center;
+  /* margin-bottom: 94px; */
 }
 .button {
   font-family: Roboto, sans-serif;
@@ -94,16 +99,17 @@ header {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   background: var(--accent-color);
   color: var(--effect-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  position: absolute;
   height: 50px;
   width: 200px;
+  margin-left: 248px;
+  margin-right: 248px;
+  align-items: center;
 }
 /* main section */
 .section-title {
@@ -132,6 +138,7 @@ header {
   text-transform: uppercase;
   background: rgba(47, 48, 58, 0.8);
   color: var(--effect-color);
+  text-align: center;
 }
 .team-list {
   font-weight: 500;
@@ -166,6 +173,12 @@ footer {
   line-height: 2;
   text-align: center;
   color: rgba(255, 255, 255, 0.4);
+  width: 310px;
+}
+.copyright-info {
+  display: flex;
+  padding: 18px 645px 21px;
+  align-items: center;
 }
 .footer-item {
   font-weight: 700;
@@ -221,26 +234,136 @@ address {
   background: rgba(33, 150, 243, 0.9);
   color: #ffffff;
 }
+/* hw 3 */
+h1 {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+h2 {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
 .container {
-  width: 1600px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 215px;
+  padding-right: 215px;
   margin-left: auto;
   margin-right: auto;
-}
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 .site-nav,
 .contact-nav,
 .site-header-content {
   display: flex;
 }
+.site-header-content {
+  align-items: center;
+}
+.site-nav-item:not(:first-child) {
+  margin-left: 50px;
+}
+.site-nav-item {
+  line-height: 80px;
+}
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.contact-nav {
+  margin-left: auto;
+}
+.section {
+  padding: 0 215px 94px;
+}
+.features {
+  display: flex;
+  padding-left: 0;
+}
+.features-list:not(:first-child) {
+  margin-left: 30px;
+}
+.features-item {
+  width: 270px;
+}
+.features-logo {
+  margin: 25px 100px;
+}
+.our-work {
+  display: flex;
+  padding-left: 0;
+}
+.works-list:not(:first-child) {
+  margin-left: 30px;
+}
+.works-list {
+  width: 370px;
+}
+.our-team {
+  display: flex;
+  padding-left: 0;
+  text-align: center;
+}
+.team-member:not(:first-child) {
+  margin-left: 30px;
+}
+.team-member {
+  width: 270px;
+}
+.social-link {
+  display: flex;
+}
+.clients {
+  display: flex;
+  padding-left: 0;
+}
+.clients-list:not(:first-child) {
+  margin-left: 30px;
+}
+.clients-list {
+  width: 170px;
+}
+.footer-container {
+  display: flex;
+}
+.address-list {
+  flex-direction: column;
+  display: flex;
+  margin-left: 214px;
+  margin-bottom: 28px;
+}
+.address-container .logo {
+  margin-left: 214px;
+  margin-top: 45px;
+  margin-bottom: 8px;
+}
+.subscribe-form {
+  margin: 57px 216px 50px 0;
+  width: 570px;
+}
+.subscribe {
+  width: 206px;
+  margin: 57px 94px 56px 69px;
+}
+/* portfolio */
+.projects-scroll {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+}
+.project-list {
+  width: 370px;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.project-list:nth-child(3n) {
+  margin-right: 0;
+}
 
-  site-header
-  site-header-content
-  site-nav-item
-  site-nav
-  site-nav-contact-item;
+.projects {
+  padding: 94px 215px;
+}
