--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   background-color: #e5e5e5;
-  width: 1600px;
 }
 a {
   text-decoration: none;
@@ -185,7 +184,7 @@ footer {
 }
 .copyright-info {
   display: flex;
-  padding: 18px 645px 21px;
+  padding: 18px 415px 21px;
   align-items: center;
 }
 .footer-item {
@@ -260,10 +259,11 @@ address {
   margin-bottom: 10px;
 }
 .container {
-  padding-left: 215px;
-  padding-right: 215px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 1200px;
 }
 .site-nav,
 .contact-nav,
@@ -288,7 +288,7 @@ address {
   margin-left: auto;
 }
 .section {
-  padding: 0 215px 94px;
+  padding-bottom: 94px;
 }
 .features,
 .our-work,
@@ -333,11 +333,9 @@ address {
 .address-list {
   flex-direction: column;
   display: flex;
-  margin-left: 214px;
   margin-bottom: 28px;
 }
 .address-container .logo {
-  margin-left: 214px;
   margin-top: 45px;
   margin-bottom: 8px;
 }
@@ -370,7 +368,8 @@ address {
   margin-top: 30px;
 }
 .projects {
-  padding: 94px 215px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .mail {
   margin-right: 30px;
