--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ ul {
   font-size: 26px;
   line-height: 1.19;
   color: var(--accent-color);
-  display: flex;
   align-items: center;
   margin-right: 85px;
 }
@@ -330,6 +329,9 @@ address {
   flex-direction: column;
   display: flex;
   margin-bottom: 28px;
+}
+.footer {
+  display: flex;
 }
 .address-container .logo {
   margin-top: 45px;
