--- a/css/styles.css
+++ b/css/styles.css
@@ -331,11 +331,17 @@ address {
 .works-list:not(:first-child) {
   margin-left: 30px;
 }
+.works-list {
+  width: 370px;
+}
 .our-team {
   text-align: center;
 }
 .team-member:not(:first-child) {
   margin-left: 30px;
+}
+.team-member {
+  width: 270px;
 }
 .team-info {
   padding: 30px 32px 24px;
